[package]
name = "monchan"
version = "0.1.0"
authors = ["Novotnik, Petr <petr.novotnik@firma.seznam.cz>"]

[dependencies]
getopts = "*"
log = "*"
env_logger = "*"
byteorder = "*"
stopwatch = "*"

[dependencies.kafka]
#version = "*"
#path = "../kafka-rust"
git = "https://github.com/spicavigo/kafka-rust.git"
branch = "xitep/fetch-offset-api"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
